# server/internal/model/admin/config.go
@@ -4,6 +4,7 @@ import "base/internal/model"
 
 type Config struct {
 	model.BaseModel
+	ConfigName  string `json:"configName" gorm:"size:128"`
 	ConfigKey   string `json:"configKey" gorm:"uniqueIndex;not null;size:128"`
 	ConfigValue string `json:"configValue" gorm:"type:text"`
 	ConfigGroup string `json:"configGroup" gorm:"size:64;index"`
